// Copyright 2016 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////

syntax = "proto3";

package blog;

option php_generic_services = true;
option php_namespace="Blog";
option php_metadata_namespace="GPBMetadata";

import "google/protobuf/empty.proto";

service Blog {
  // READ all
  rpc Index(google.protobuf.Empty) returns (ListPostsResponse) {}
  // READ one
  rpc Show(PostRequest) returns (PostResponse) {}
  // STORE
  rpc Store(PostStoreRequest) returns (SuccessResponse) {}
  // UPDATE
  rpc Update(PostUpdateRequest) returns (SuccessResponse) {}
  // DELETE
  rpc Delete(PostRequest) returns (SuccessResponse) {}
}

// ----------------- Responses -----------------
// A resource.
message PostResponse {
  int64 id = 1;
  string category = 2;
  string title = 3;
  string slug = 4;
  string subtitle = 5;
  string body = 6;
  int32 position = 7;
  string created_at = 8;
  string updated_at = 9;
}

// Response message to Index method.
message ListPostsResponse {
  repeated PostResponse posts = 1;
}

// Response message to Other methods.
message SuccessResponse {
  string message = 1;
}

// ----------------- Requests -----------------
// Request message for Show/Delete method.
message PostRequest {
  string slug = 1;
}

// Request message for Store method.
message PostStoreRequest {
  string category = 1;
  string title = 2;
  string subtitle = 3;
  string body = 4;
  int32 position = 5;
}

// Request message for Update method.
message PostUpdateRequest {
  int64 id = 1;
  string category = 2;
  string title = 3;
  string subtitle = 4;
  string body = 5;
  int32 position = 6;
}
